# CV_From_Scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_data.py
include/: data_utils.h  layers.h  models.h  tensor.h  train.h  vision_transforms.h
lib/: README.md
src/: ModelManager.cpp  data_utils.cpp  demo.cpp  layers.cpp  model_manager.cpp  models.cpp  tensor.cpp  train.cpp  vision_transforms.cpp
tests/: CMakeLists.txt  test.cpp  test_tensor.cpp
